--- a/.github/workflows/syncProfile.yml
+++ b/.github/workflows/syncProfile.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
+      
+      - name: Install requairments
         run: |
           pip install feedparser
         
