--- a/.github/workflows/syncProfile.yml
+++ b/.github/workflows/syncProfile.yml
@@ -18,13 +18,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Python and feedparser
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
       
       - name: Install requairments
         run: |
-          pip install feedparser
+          python -m pip install feedparser
         
       - name: Sync Blog content to Github Profile
         run: |
