修改提交信息

--- a/.github/workflows/syncProfile.yml
+++ b/.github/workflows/syncProfile.yml
@@ -36,7 +36,7 @@ jobs:
           git config --global user.name "${MYNAME}-bot"
           git remote add ${REPO_NAME} "https://${TOKEN}@${REF}"
           git add .
-          git commit -m "commited by GitHub workflow, built git book"
+          git commit -m "ZheWana-bot: Sync Github profile."
           git push --force ${REPO_NAME}
 
 
