fix: 解决在没有Git更新时工作流误报错误的问题

--- a/.github/workflows/syncProfile.yml
+++ b/.github/workflows/syncProfile.yml
@@ -35,8 +35,9 @@ jobs:
           git config --global user.email "${MYEMAIL}"
           git config --global user.name "${MYNAME}-bot"
           git remote add ${REPO_NAME} "https://${TOKEN}@${REF}"
+          git pull
           git add .
-          git commit -m "ZheWana-bot: Sync Github profile."
+          git commit -m "ZheWana-bot: Sync Github profile." || exit 0
           git push --force ${REPO_NAME}
 
 
